--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vue-component-creater-ui",
   "version": "0.1.0",
   "private": true,
-  "main":"./src/main.js",
+  "main": "./src/main.js",
   "scripts": {
     "serve": "vue-cli-service serve --open --port 8008",
-    "build": "vue-cli-service build --target wc --name vcc-ui ./Main.vue --inline-vue",
+    "build": "vue-cli-service build --target lib ./index.js",
     "compileAndbuild:dev": "npm run compileComponent && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build:prod": "vue-cli-service build --mode production",
