--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/main.js",
   "scripts": {
     "serve": "vue-cli-service serve --open --port 8008",
-    "build": "vue-cli-service build --target lib --name vcc ./src/components-v2/Main.vue",
+    "build": "vue-cli-service build --target lib --name vcc ./src/components-v2/VCC.vue",
     "compileAndbuild:dev": "npm run compileComponent && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build:prod": "vue-cli-service build --mode production",
