--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "description": "Low Code Generator -> Vue Component Creater",
   "version": "0.5.2",
   "private": false,
-  "keywords": ["low-code", "editor"],
+  "keywords": [
+    "low-code",
+    "editor"
+  ],
   "main": "./dist/vcc.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve --open --port 8008",
+    "build:release": "vue-cli-service build",
     "build": "vue-cli-service build --target lib --name vcc ./src/components-v2/VCC.vue",
     "compileAndbuild:dev": "npm run compileComponent && vue-cli-service build",
     "lint": "vue-cli-service lint",
