--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vant": "^2.10.7",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
     "vuex": "^3.1.2"
