--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/parser": "^7.11.5",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^1.7.2",
+    "axios": "^0.21.4",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "crypto-random-string": "^3.3.0",
@@ -50,7 +51,7 @@
     "stringify-object": "^3.3.0",
     "vant": "^2.10.7",
     "view-design": "^4.3.2",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
@@ -71,7 +72,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
