--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-PUBLIC_PATH=https://static.imonkey.xueersi.com/vue-creater-platform/
+PUBLIC_PATH=https://static.imonkey.xueersi.com/vue-code-creater/
