--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "view-design": "^4.3.2",
     "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
+    "vue-github-button": "^1.3.0",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
     "vuex": "^3.1.2"
