--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "main": "./dist/vcc.umd.min.js",
   "scripts": {
+    "dev": "vite --port 8008",
     "serve": "vue-cli-service serve --open --port 8008",
     "build:release": "vue-cli-service build",
     "build": "vue-cli-service build --report --target lib --name vcc './src/components-v2/VCC.vue' && node ./src/script/distClear.js",
@@ -22,36 +23,41 @@
   },
   "dependencies": {
     "@babel/parser": "^7.11.5",
-    "ant-design-vue": "^1.7.2",
+    "@originjs/vite-plugin-require-context": "^1.0.9",
+    "@vitejs/plugin-vue": "^1.10.0",
+    "@vue/compat": "^3.2.22",
+    "@vue/compiler-sfc": "^3.2.22",
     "axios": "^0.21.4",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "crypto-random-string": "^3.3.0",
     "css": "^3.0.0",
-    "element-ui": "^2.15.6",
+    "element-plus": "^1.2.0-beta.3",
     "escodegen": "^2.0.0",
     "espree": "^7.3.0",
     "eventemitter3": "^4.0.7",
     "fast-xml-parser": "^3.17.4",
     "file-saver": "^2.0.2",
     "fs-extra": "^9.0.1",
+    "get-own-enumerable-property-symbols": "^3.0.2",
     "glob": "^7.1.6",
     "html2canvas": "^1.0.0-rc.7",
     "is-absolute-url": "^3.0.3",
     "keymaster": "^1.6.2",
-    "lodash": "^4.17.20",
+    "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "modern-normalize": "^1.0.0",
+    "object-inspect": "^1.11.0",
     "parse-package-name": "^0.1.0",
     "prettier": "^2.4.0",
     "prismjs": "^1.20.0",
     "query-string": "^6.13.7",
     "register-service-worker": "^1.6.2",
     "split.js": "^1.6.2",
-    "stringify-object": "^3.3.0",
     "vant": "^2.10.7",
     "view-design": "^4.3.2",
-    "vue": "^2.6.14",
+    "vite": "^2.6.14",
+    "vue": "^3.2.22",
     "vue-codemirror": "^4.0.6",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
@@ -72,7 +78,9 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "is-obj": "^3.0.0",
+    "is-regexp": "^3.0.0"
   },
   "eslintConfig": {
     "root": true,
