--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/compat": "^3.2.22",
     "@vue/compiler-sfc": "^3.2.22",
     "axios": "^0.21.4",
+    "codemirror-editor-vue3": "^0.2.4",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
     "crypto-random-string": "^3.3.0",
@@ -51,7 +52,6 @@
     "object-inspect": "^1.11.0",
     "parse-package-name": "^0.1.0",
     "prettier": "^2.4.0",
-    "prismjs": "^1.20.0",
     "query-string": "^6.13.7",
     "register-service-worker": "^1.6.2",
     "split.js": "^1.6.2",
@@ -59,7 +59,6 @@
     "view-design": "^4.3.2",
     "vite": "^2.6.14",
     "vue": "^3.2.22",
-    "vue-codemirror": "^4.0.6",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
     "vuex": "^3.1.2"
