--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "codemirror-editor-vue3": "^0.2.4",
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.4",
-    "crypto-random-string": "^3.3.0",
     "css": "^3.0.0",
     "element-plus": "^1.2.0-beta.3",
     "escodegen": "^2.0.0",
@@ -49,6 +48,7 @@
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "modern-normalize": "^1.0.0",
+    "nanoid": "^3.1.30",
     "object-inspect": "^1.11.0",
     "parse-package-name": "^0.1.0",
     "prettier": "^2.4.0",
