--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "vue": "^3.2.22",
     "vue-nestable": "^2.6.0",
     "vue-router": "^3.4.9",
-    "vuex": "^3.1.2"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/generator": "^7.11.6",
