--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "debugParser": "node ./src/test/parserJsCode.js"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.8",
     "@element-plus/icons": "0.0.11",
     "@vitejs/plugin-vue": "^1.10.0",
     "@vue/compiler-sfc": "^3.2.22",
+    "ant-design-vue": "^3.0.0-alpha.14",
     "axios": "^0.21.4",
     "codemirror-editor-vue3": "^0.2.4",
     "copy-to-clipboard": "^3.3.1",
     "crypto-random-string": "^3.3.1",
     "css": "^3.0.0",
-    "element-plus": "^1.2.0-beta.3",
     "css-scoped": "^1.0.0",
+    "element-plus": "^1.2.0-beta.3",
     "escodegen": "^2.0.0",
     "espree": "^7.3.0",
     "eventemitter3": "^4.0.7",
@@ -47,10 +47,10 @@
     "vant": "^2.10.7",
     "vite": "^2.6.14",
     "vue": "^3.2.22",
-    "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2",
+    "vue-github-button": "^1.3.0",
     "vue-template-compiler": "^2.6.14",
-    "vue-github-button": "^1.3.0"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/generator": "^7.11.6",
