--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "copy-to-clipboard": "^3.3.1",
     "crypto-random-string": "^3.3.1",
     "css": "^3.0.0",
-    "element-plus": "^1.2.0-beta.3",
     "css-scoped": "^1.0.0",
+    "element-plus": "^1.2.0-beta.3",
     "escodegen": "^2.0.0",
     "espree": "^7.3.0",
     "eventemitter3": "^4.0.7",
@@ -43,13 +43,13 @@
     "nanoid": "^3.1.30",
     "prettier": "^2.4.0",
     "split.js": "^1.6.2",
-    "vant": "^2.10.7",
+    "vant": "^3.3.7",
     "vite": "^2.6.14",
     "vue": "^3.2.22",
-    "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2",
+    "vue-github-button": "^1.3.0",
     "vue-template-compiler": "^2.6.14",
-    "vue-github-button": "^1.3.0"
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/generator": "^7.11.6",
