--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/generator": "^7.11.6",
+    "@rollup/plugin-dynamic-import-vars": "^1.4.1",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-pwa": "^4.2.0",
@@ -63,11 +64,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
+    "is-obj": "^3.0.0",
+    "is-regexp": "^3.0.0",
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
-    "is-obj": "^3.0.0",
-    "is-regexp": "^3.0.0"
+    "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
     "root": true,
