--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debugParser": "node ./src/test/parserJsCode.js"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^1.7.2",
     "axios": "^0.21.4",
     "copy-to-clipboard": "^3.3.1",
