--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "debugParser": "node ./src/test/parserJsCode.js"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.6",
+    "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue": "^1.10.0",
     "@vue/compiler-sfc": "^3.2.22",
     "ant-design-vue": "^3.0.0-alpha.14",
@@ -33,7 +33,7 @@
     "css": "^3.0.0",
     "css-scoped": "^1.0.0",
     "ejs": "^3.1.6",
-    "element-plus": "^1.2.0-beta.3",
+    "element-plus": "^2.4.3",
     "escodegen": "^2.0.0",
     "espree": "^7.3.0",
     "eventemitter3": "^4.0.7",
@@ -47,7 +47,7 @@
     "split.js": "^1.6.2",
     "vant": "^3.3.7",
     "vite": "^2.6.14",
-    "vue": "^3.2.22",
+    "vue": "^3.3.10",
     "vue-github-button": "^1.3.0",
     "vue-template-compiler": "^2.6.14",
     "vuedraggable": "^4.1.0",
