--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto-random-string": "^3.3.1",
     "css": "^3.0.0",
     "css-scoped": "^1.0.0",
+    "echarts": "^5.4.3",
     "ejs": "^3.1.6",
     "element-plus": "^2.4.3",
     "escodegen": "^2.0.0",
@@ -47,6 +48,7 @@
     "split.js": "^1.6.2",
     "vant": "^3.3.7",
     "vue": "^3.3.10",
+    "vue-echarts": "^6.6.2",
     "vue-github-button": "^1.3.0",
     "vue-template-compiler": "^2.6.14",
     "vuedraggable": "^4.1.0",
@@ -55,11 +57,6 @@
   "devDependencies": {
     "@babel/generator": "^7.11.6",
     "@rollup/plugin-dynamic-import-vars": "^1.4.1",
-    "vite": "^2.6.14",
-    "@vue/cli-plugin-babel": "^4.2.0",
-    "@vue/cli-plugin-eslint": "^4.2.0",
-    "@vue/cli-plugin-pwa": "^4.2.0",
-    "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
@@ -69,7 +66,8 @@
     "is-regexp": "^3.0.0",
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vite": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
