--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
+    "@vue/cli-service": "^5.0.8",
     "vite": "^2.6.14"
   },
   "eslintConfig": {
